build navbar section

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -563,3 +563,41 @@
   </div>
   <p class="subscribe__text">Keep up to date with all new themes and updates</p>
 </div>
+
+
+<!-- navbar section -->
+<div class="navbar container flex">
+  <a href="index.html" class="logo">
+    <img src="image/logo.png" alt="logo" />
+  </a>
+  <nav class="menu">
+    <ul class="list menu__list">
+      <li class="item menu__item">
+        <a href="#" class="link menu__link">Home</a>
+      </li>
+      <li class="item menu__item">
+        <a href="#" class="link menu__link">Pages</a>
+      </li>
+      <li class="item menu__item">
+        <a href="#" class="link menu__link">Services</a>
+      </li>
+      <li class="item menu__item">
+        <a href="#" class="link menu__link">Portfolio</a>
+      </li>
+      <li class="item menu__item">
+        <a href="#" class="link menu__link">Blog</a>
+      </li>
+      <li class="item menu__item">
+        <a href="#" class="link menu__link">Contact</a>
+      </li>
+    </ul>
+    <div class="action menu__action">
+      <a href="#" class="btn btn--outline">login</a>
+      <span class="or">or</span>
+      <a href="#" class="btn btn--outline">create account</a>
+    </div>
+  </nav>
+  <button aria-label="bar" type="button" class="bar">
+    <i class="fa-solid fa-bars"></i>
+  </button>
+</div>
