build hero section

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -564,7 +564,6 @@
   <p class="subscribe__text">Keep up to date with all new themes and updates</p>
 </div>
 
-
 <!-- navbar section -->
 <div class="navbar container flex">
   <a href="index.html" class="logo">
@@ -601,3 +600,18 @@
     <i class="fa-solid fa-bars"></i>
   </button>
 </div>
+
+<!-- hero section -->
+<section class="container hero flex flex--phone">
+  <div class="content content--big hero__content">
+    <h1 class="content__heading">realize your full potential</h1>
+    <p class="content__desc">
+      we help our clients make realize thier most important business goals
+    </p>
+    <div class="action content__action">
+      <a href="#" class="btn btn--gradient">contact us</a>
+      <a href="#" class="link link--arrow">order similar</a>
+    </div>
+  </div>
+  <img src="image/hero.svg" alt="" class="svg hero__img" />
+</section>
