build skills section

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -565,7 +565,7 @@
 </div>
 
 <!-- section -->
-<section class="container section hero flex flex--tablet">
+<section class="container section hero flex">
   <div class="content content--big section__content">
     <h1 class="content__heading">realize your full potential</h1>
     <p class="content__desc">
@@ -579,7 +579,7 @@
   <img src="image/hero.svg" alt="" class="section__img" />
 </section>
 <br />
-<section class="container section service flex flex--tablet">
+<section class="container section service flex">
   <div class="content content--big section__content">
     <h2 class="content__heading">
       get the ultimate tool and learn how to grow your audience
@@ -597,7 +597,7 @@
   <img src="image/service.svg" alt="" class="section__img" />
 </section>
 <br />
-<section class="container section teamwork flex flex--tablet">
+<section class="container section teamwork flex">
   <div class="content content--big section__content">
     <h2 class="content__heading">
       we offer a full range of digital marketing services
@@ -613,4 +613,48 @@
     </div>
   </div>
   <img src="image/teamwork.svg" alt="" class="section__img" />
+</section>
+<br>
+<section class="container section flex skills">
+  <div class="content content--big section__content">
+    <h2 class="content__heading">our skills &amp; expertise</h2>
+    <p class="content__desc">
+      we help company set up business strategy including design brand
+      identity or product design service. So company can focus on their core
+      business. Morbi accumsan ipsumm velit. Nam nec tellus
+    </p>
+    <a href="#" class="btn btn--gradient content__btn"
+      >we are in the press</a
+    >
+  </div>
+  <div class="section__box">
+    <div class="rangebox brand">
+      <div class="rangebox__text flex">
+        <span class="type">branding</span>
+        <span class="percent">96%</span>
+      </div>
+      <div class="range"></div>
+    </div>
+    <div class="rangebox design">
+      <div class="rangebox__text flex">
+        <span class="type">design &amp; development</span>
+        <span class="percent">81%</span>
+      </div>
+      <div class="range"></div>
+    </div>
+    <div class="rangebox pr">
+      <div class="rangebox__text flex">
+        <span class="type">PR &amp; marketing</span>
+        <span class="percent">90%</span>
+      </div>
+      <div class="range"></div>
+    </div>
+    <div class="rangebox ph">
+      <div class="rangebox__text flex">
+        <span class="type">PH &amp; marketing</span>
+        <span class="percent">88%</span>
+      </div>
+      <div class="range"></div>
+    </div>
+  </div>
 </section>
