--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,6 @@ p{
 .flex{
 	display: flex;
 }
-.flex--tablet{
-	flex-direction: column;
-}
 .flex--center{
 	align-items: center;
 	justify-content: center;
@@ -535,6 +532,7 @@ p{
 
 /* section */
 .section{
+	flex-direction: column;
 	padding: 2.5rem 1rem;
 	gap: 3rem;
 }
@@ -559,16 +557,13 @@ p{
 		font-size: 4.5rem;
 	}
 	h2{
-		font-size: 3.2rem;
+		font-size: 2.7rem;
 	}
 	h3{
-		font-size: 2.5rem;
+		font-size: 2.3rem;
 	}
 	p{
 		font-size: 1.8rem;
-	}
-	.flex--tablet{
-		flex-direction: row;
 	}
 	.action, .input, .list{
 		font-size: 1.8rem;
@@ -598,6 +593,7 @@ p{
 		margin-left: 1rem;
 	}
 	.section{
+		flex-direction: row;
 		justify-content: space-around;
 		align-items: center;
 	}
@@ -608,9 +604,13 @@ p{
 		display: block;
 		order: -1;
 	}
-	h2.content__heading{
-		font-size: 2.7rem;
+	.skills .section__content{
+		width: 45%;
 	}
+	.skills .section__box{
+		width: 50%;
+	}
+	
 
 }
 
