--- a/components/uikit.html
+++ b/components/uikit.html
@@ -614,18 +614,16 @@
   </div>
   <img src="image/teamwork.svg" alt="" class="section__img" />
 </section>
-<br>
+<br />
 <section class="container section flex skills">
   <div class="content content--big section__content">
     <h2 class="content__heading">our skills &amp; expertise</h2>
     <p class="content__desc">
-      we help company set up business strategy including design brand
-      identity or product design service. So company can focus on their core
-      business. Morbi accumsan ipsumm velit. Nam nec tellus
+      we help company set up business strategy including design brand identity
+      or product design service. So company can focus on their core business.
+      Morbi accumsan ipsumm velit. Nam nec tellus
     </p>
-    <a href="#" class="btn btn--gradient content__btn"
-      >we are in the press</a
-    >
+    <a href="#" class="btn btn--gradient content__btn">we are in the press</a>
   </div>
   <div class="section__box">
     <div class="rangebox brand">
@@ -658,3 +656,46 @@
     </div>
   </div>
 </section>
+
+<!-- hero under cards -->
+<div class="container grid--3x grid">
+  <div class="card card--white grid__element">
+    <div class="media media--column">
+      <div class="media__img">
+        <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+      </div>
+      <div class="media__content">
+        <h3 class="media__heading">corporate finance</h3>
+        <p class="media__desc">
+          Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+          ...
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="card card--white grid__element">
+    <div class="media media--column">
+      <div class="media__img">
+        <span class="icon"
+          ><i class="fa-solid fa-file-invoice-dollar"></i
+        ></span>
+      </div>
+      <div class="media__content">
+        <h3 class="media__heading">audit &amp; evaluation</h3>
+        <p class="media__desc">
+          Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+          ...
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="card card--gradient grid__element">
+    <div class="content">
+      <h3 class="content__heading">market analysis</h3>
+      <p class="content__desc">
+        Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
+      </p>
+      <a href="#" class="link link--arrow content__link">read more</a>
+    </div>
+  </div>
+</div>
