build business card blocks

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -699,3 +699,62 @@
     </div>
   </div>
 </div>
+
+<!-- business cards -->
+<div class="grid grid--2x">
+  <div class="card card--white">
+    <div class="media media--column">
+      <div class="media__img">
+        <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+      </div>
+      <div class="media__content">
+        <h3 class="media__heading">corporate finance</h3>
+        <p class="media__desc">
+          Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+          Morbi ...
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="card card--white">
+    <div class="media media--column">
+      <div class="media__img">
+        <span class="icon"
+          ><i class="fa-solid fa-file-invoice-dollar"></i
+        ></span>
+      </div>
+      <div class="media__content">
+        <h3 class="media__heading">audit &amp; evaluation</h3>
+        <p class="media__desc">
+          Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+          Morbi ...
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="card card--gradient">
+    <div class="content content--small">
+      <h3 class="content__heading">market analysis</h3>
+      <p class="content__desc">
+        Nibh vel velit auctor aliqunean sollicitudionlerin bibendum auci....
+      </p>
+      <a href="#" class="link link--arrow content__link">read more</a>
+    </div>
+  </div>
+  <div class="card card--white">
+    <div class="media media--column">
+      <div class="media__img">
+        <span class="icon"
+          ><i class="fa-solid fa-hand-holding-dollar"></i
+        ></span>
+      </div>
+      <div class="media__content">
+        <h3 class="media__heading">sales &amp; trade</h3>
+        <p class="media__desc">
+          Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+          Morbi ...
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
