--- a/css/style.css
+++ b/css/style.css
@@ -576,6 +576,12 @@ p{
 	justify-self: center;
 }
 
+@media screen and (min-width:600px) {
+	.grid--2x{
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
 @media  screen and (min-width:768px) {
 	h1{
 		font-size: 4.5rem;
@@ -637,7 +643,7 @@ p{
 	.grid--3x{
 		grid-template-columns: repeat(3, 1fr);
 	}
-
+	
 }
 
 @media screen and (min-width:1024px){
