build business section

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -758,3 +758,73 @@
     </div>
   </div>
 </div>
+
+<!-- business section -->
+<section class="section container flex business">
+  <div class="grid grid--2x section__box">
+    <div class="card card--white">
+      <div class="media media--column">
+        <div class="media__img">
+          <span class="icon"><i class="fa-solid fa-dollar-sign"></i></span>
+        </div>
+        <div class="media__content">
+          <h3 class="media__heading">corporate finance</h3>
+          <p class="media__desc">
+            Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+            Morbi ...
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="card card--white">
+      <div class="media media--column">
+        <div class="media__img">
+          <span class="icon"
+            ><i class="fa-solid fa-file-invoice-dollar"></i
+          ></span>
+        </div>
+        <div class="media__content">
+          <h3 class="media__heading">audit &amp; evaluation</h3>
+          <p class="media__desc">
+            Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+            Morbi ...
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="card card--gradient">
+      <div class="content content--small">
+        <h3 class="content__heading">market analysis</h3>
+        <p class="content__desc">
+          Nibh vel velit auctor aliqunean sollicitudionlerin bibendum
+          auci....
+        </p>
+        <a href="#" class="link link--arrow content__link">read more</a>
+      </div>
+    </div>
+    <div class="card card--white">
+      <div class="media media--column">
+        <div class="media__img">
+          <span class="icon"
+            ><i class="fa-solid fa-hand-holding-dollar"></i
+          ></span>
+        </div>
+        <div class="media__content">
+          <h3 class="media__heading">sales &amp; trade</h3>
+          <p class="media__desc">
+            Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.
+            Morbi ...
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="content content--big section__content">
+    <h2 class="content__heading">get a solutions to your businesses</h2>
+    <p class="content__desc">
+      our consultants help address your most challenging isssues by
+      providing strategic, financial operational, and IT services.
+    </p>
+    <a href="#" class="btn btn--gradient content__btn">all services</a>
+  </div>
+</section>
