--- a/css/style.css
+++ b/css/style.css
@@ -643,6 +643,12 @@ p{
 	.grid--3x{
 		grid-template-columns: repeat(3, 1fr);
 	}
+	.business .section__box{
+		width: 60%;
+	}
+	.business .section__content{
+		width: 35%;
+	}
 	
 }
 
@@ -653,5 +659,11 @@ p{
 	}
 	.section__img{
 		width: 60%;
+	}
+	.business .section__box{
+		width: 70%;
+	}
+	.business .section__content{
+		width: 25%;
 	}
 }
