--- a/components/uikit.html
+++ b/components/uikit.html
@@ -412,7 +412,7 @@
 <h3 class="price__heading best">basic</h3>
 
 <!-- price card -->
-<div class="card price">
+<div class="card price grid__element">
   <header class="price__header">
     <h3 class="price__heading best">basic</h3>
     <div class="divider"></div>
@@ -440,7 +440,7 @@
   </ul>
   <button class="btn btn--gradient price__btn">getting started</button>
 </div>
-<div class="card price">
+<div class="card price grid__element">
   <header class="price__header">
     <h3 class="price__heading">standard</h3>
     <div class="divider"></div>
@@ -468,7 +468,7 @@
   </ul>
   <button class="btn btn--gradient price__btn">getting started</button>
 </div>
-<div class="card price">
+<div class="card price grid__element">
   <header class="price__header">
     <h3 class="price__heading">advance</h3>
     <div class="divider"></div>
@@ -828,3 +828,91 @@
     <a href="#" class="btn btn--gradient content__btn">all services</a>
   </div>
 </section>
+
+<!-- prices section -->
+<div class="container grid grid--3x prices">
+  <div class="card price grid__element">
+    <header class="price__header">
+      <h3 class="price__heading best">basic</h3>
+      <div class="divider"></div>
+      <div class="moneybox flex">
+        <span class="money">15</span>
+        <span class="month">per month</span>
+      </div>
+    </header>
+    <ul class="list price__list">
+      <li class="item price__item">
+        <a href="#" class="link link--tick">free updates</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">custom domain</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">outstanding support</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--saltire">unlimited storage</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--saltire">build responsive website</a>
+      </li>
+    </ul>
+    <button class="btn btn--gradient price__btn">getting started</button>
+  </div>
+  <div class="card price grid__element">
+    <header class="price__header">
+      <h3 class="price__heading">standard</h3>
+      <div class="divider"></div>
+      <div class="moneybox flex">
+        <span class="money">37</span>
+        <span class="month">per month</span>
+      </div>
+    </header>
+    <ul class="list price__list">
+      <li class="item price__item">
+        <a href="#" class="link link--tick">free updates</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">custom domain</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">outstanding support</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">unlimited storage</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--saltire">build responsive website</a>
+      </li>
+    </ul>
+    <button class="btn btn--gradient price__btn">getting started</button>
+  </div>
+  <div class="card price grid__element">
+    <header class="price__header">
+      <h3 class="price__heading">advance</h3>
+      <div class="divider"></div>
+      <div class="moneybox flex">
+        <span class="money">42</span>
+        <span class="month">per month</span>
+      </div>
+    </header>
+    <ul class="list price__list">
+      <li class="item price__item">
+        <a href="#" class="link link--tick">free updates</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">custom domain</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">outstanding support</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">unlimited storage</a>
+      </li>
+      <li class="item price__item">
+        <a href="#" class="link link--tick">build responsive website</a>
+      </li>
+    </ul>
+    <button class="btn btn--gradient price__btn">getting started</button>
+  </div>
+</div>
