build support section

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -565,7 +565,7 @@
 </div>
 
 <!-- section -->
-<section class="container section hero flex">
+<div class="container section hero flex">
   <div class="content content--big section__content">
     <h1 class="content__heading">realize your full potential</h1>
     <p class="content__desc">
@@ -577,9 +577,9 @@
     </div>
   </div>
   <img src="image/hero.svg" alt="" class="section__img" />
-</section>
+</div>
 <br />
-<section class="container section service flex">
+<div class="container section service flex">
   <div class="content content--big section__content">
     <h2 class="content__heading">
       get the ultimate tool and learn how to grow your audience
@@ -595,9 +595,9 @@
     </div>
   </div>
   <img src="image/service.svg" alt="" class="section__img" />
-</section>
+</div>
 <br />
-<section class="container section teamwork flex">
+<div class="container section teamwork flex">
   <div class="content content--big section__content">
     <h2 class="content__heading">
       we offer a full range of digital marketing services
@@ -613,9 +613,9 @@
     </div>
   </div>
   <img src="image/teamwork.svg" alt="" class="section__img" />
-</section>
+</div>
 <br />
-<section class="container section flex skills">
+<div class="container section flex skills">
   <div class="content content--big section__content">
     <h2 class="content__heading">our skills &amp; expertise</h2>
     <p class="content__desc">
@@ -655,7 +655,7 @@
       <div class="range"></div>
     </div>
   </div>
-</section>
+</div>
 
 <!-- hero under cards -->
 <div class="container grid--3x grid">
@@ -760,7 +760,7 @@
 </div>
 
 <!-- business section -->
-<section class="section container flex business">
+<div class="section container flex business">
   <div class="grid grid--2x section__box">
     <div class="card card--white">
       <div class="media media--column">
@@ -827,7 +827,7 @@
     </p>
     <a href="#" class="btn btn--gradient content__btn">all services</a>
   </div>
-</section>
+</div>
 
 <!-- prices section -->
 <div class="container grid grid--3x prices">
@@ -914,5 +914,35 @@
       </li>
     </ul>
     <button class="btn btn--gradient price__btn">getting started</button>
+  </div>
+</div>
+
+<!-- support section -->
+<div class="support section container flex">
+  <div class="media media--row">
+    <div class="media__img">
+      <span class="icon"><i class="fa-solid fa-headset"></i></span>
+    </div>
+    <div class="media__content">
+      <h3 class="media__heading">looking for support</h3>
+      <p class="media__desc">
+        On the other hand, we denounce with righteous dislike so men who are
+        beguiled indidgnation and they foresee
+      </p>
+      <a href="#" class="link link--arrow media__link">read more</a>
+    </div>
+  </div>
+  <div class="media media--row">
+    <div class="media__img">
+      <span class="icon"><i class="fa-solid fa-question"></i></span>
+    </div>
+    <div class="media__content">
+      <h3 class="media__heading">view common questions</h3>
+      <p class="media__desc">
+        Et harum quidem rerum facilies est et expedita destinctio. Nam
+        libero tempore, cum soluta nobies est eligendi
+      </p>
+      <a href="#" class="link link--arrow media__link">read more</a>
+    </div>
   </div>
 </div>
