build footer section

--- a/components/uikit.html
+++ b/components/uikit.html
@@ -982,3 +982,65 @@
     <i class="fa-solid fa-bars"></i>
   </button>
 </div>
+
+<!-- footer section -->
+<footer>
+  <div class="section container grid grid--3x footer__grid">
+    <div class="box contact">
+      <h3 class="box__heading">Contacts</h3>
+      <address class="contact__address">
+        <div class="call flex">
+          <span class="icon call__icon"
+            ><i class="fa-solid fa-headset"></i
+          ></span>
+          <p class="call__text">
+            <span class="question">Have questions?</span>
+            <a href="tel:+44141433433333" class="link call__number"
+              >+ 44 141 552 3000</a
+            >
+          </p>
+        </div>
+        <p class="location">
+          Address: 2 ST Gabriel Walk, London SE1 6FG, United Kingdom
+        </p>
+        <p class="email">
+          Email:
+          <a href="mailto:info@betria.com" class="link">info@betria.com</a>
+        </p>
+      </address>
+    </div>
+
+    <div class="box links">
+      <h3 class="box__heading">Links</h3>
+      <div class="links__container flex">
+        <ul class="list">
+          <li class="item"><a href="#" class="link">About company</a></li>
+          <li class="item"><a href="#" class="link">Our service</a></li>
+          <li class="item"><a href="#" class="link">Team members</a></li>
+          <li class="item"><a href="#" class="link">Portfolio</a></li>
+        </ul>
+        <ul class="list">
+          <li class="item"><a href="#" class="link">Pricing plans</a></li>
+          <li class="item"><a href="#" class="link">Testimonials</a></li>
+          <li class="item"><a href="#" class="link">Contacts</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="box subscribe">
+      <h3 class="box__heading">Subscribe</h3>
+      <div class="input-group flex">
+        <input
+          aria-label="Email"
+          type="email"
+          class="input"
+          placeholder="Enter your email"
+        />
+        <span class="icon"><i class="fa-regular fa-paper-plane"></i></span>
+      </div>
+      <p class="subscribe__text">
+        Keep up to date with all new themes and updates
+      </p>
+    </div>
+  </div>
+  <div class="footer__copy">&copy; Maxami 2024 Landing Page by Medemanow</div>
+</footer>
